# aws-workshop

./: .gitignore  Makefile  pyproject.toml  ws.ipynb
dummy/: important_file.txt
infra/: config.tf  main.tf  terraform.tfstate.backup
