[tool.poetry]
name = "aws-workshop"
version = "0.1.0"
description = ""
authors = ["Roberto Madinya <roberto.madinya@ioet.com>"]
readme = "README.md"
packages = [{include = "aws_workshop"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.27"
ipykernel = "^6.25.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
